Opened 8 years ago

Closed 8 years ago

#13133 closed bug (fixed)

[Patch] apps/deskbar/DeskbarMenu.cpp: fix memory leak

Reported by: mt Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In TDeskbarMenu::AddNextItem(), memory allocated to 'recentItem' at line 174 [1] could leak at line 203 [2] if 'enabled' is false at line 181 [3].

[1] http://cgit.haiku-os.org/haiku/tree/src/apps/deskbar/DeskbarMenu.cpp#n174 [2] http://cgit.haiku-os.org/haiku/tree/src/apps/deskbar/DeskbarMenu.cpp#n203 [3] http://cgit.haiku-os.org/haiku/tree/src/apps/deskbar/DeskbarMenu.cpp#n181

Attachments (2)

0038-DeskbarMenu.cpp-fix-memory-leak.patch (703 bytes ) - added by mt 8 years ago.
report-50b538.html (83.5 KB ) - added by mt 8 years ago.
Report by Clang Static Analyzer

Download all attachments as: .zip

Change History (4)

comment:1 by mt, 8 years ago

patch: 01

by mt, 8 years ago

Attachment: report-50b538.html added

Report by Clang Static Analyzer

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Applied in hrev50813. Thanks!

Note: See TracTickets for help on using tickets.