DeskbarMenu.cpp: fix memory leak

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

Fixes #13133